--- a/report_algorithms_multi_05.Rmd
+++ b/report_algorithms_multi_05.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Comparison of Algorithms Across Business Lines"
+title: "Multi Company Model"
 output: html_notebook
 ---
 
@@ -12,16 +12,12 @@ warmup = 500
 iter_multi=800
 warmup_multi=200
 
-chains = 2
+chains = 8
 
 adapt_delta = 0.9
 max_treedepth = 11
-business_lines = c("comauto", "medmal", "othliab","ppauto","prodliab", "wkcomp")
-business_lines = c("wkcomp", "othliab")
+#business_lines = c("comauto", "medmal", "othliab","ppauto","prodliab", "wkcomp")
 business_lines = c("wkcomp")
-#business_lines = c("medmal","ppauto","prodliab", "wkcomp")
-#business_lines = c("comauto")
-#business_lines = c("othliab")
 ```
 
 
@@ -41,8 +37,6 @@ company_max = 5
 # }
 
 
-set.seed(666)
-company_max = 5
 for (bus in business_lines){
   all_lines = unique(data$GRCODE[data$line == bus])
   data = data %>%
@@ -67,7 +61,7 @@ alpha = 0.001
 scaled_development_lag = c(scale(1:10))
 
 min_length_scale = abs(scaled_development_lag[1]-scaled_development_lag[2]) # choose any two sequential points
-max_length_scale = abs(max(scaled_development_lag)-min(scaled_development_lag)) # choose any two sequential points
+max_length_scale = abs(max(scaled_development_lag)-min(scaled_development_lag)) # choose furthest  points
 
 prior_rho = rho_prior_tune(tail_size = alpha, lower_ls = min_length_scale, upper_ls = max_length_scale)
 
@@ -88,13 +82,16 @@ prior_rho = prior_rho$par
 
 This notebook tests key algorithms across the different business lines.  The algorithms tested include
 
+* Multi Company GP on Incremental Loss Ratios with Hurdle Model
+* Multi Company GP on Incremental Loss Ratios with Hurdle Model,with individual company lengthscale factor
 
 * Mack Chain Ladder
 * Bootstrap Chain Ladder
 
+* Plain GP on Incremental Loss Ratios  
 * GP on Incremental Loss Ratios  with hurdle model
 * GP on Incremental Loss Ratios  with hurdle model and virtual data points
-* GP on Incremental Loss Ratios  with hurdle model using multi-company model
+
 
 
 Since the Chain Ladder does not produce a distribution, the rank and distribution tests cannot be performed.  For all other methods, the distribution tests are performed.
@@ -111,31 +108,6 @@ stanMod <- stan_model(file=paste0(stan_dir,  "gp_hurdle_multi_co_phiapprox_05.st
 stanMod <- stan_model(file=paste0(stan_dir,  "gp_hurdle_multi_co_indiv_rho_05.stan"))
 
 ```
-
-### Tuning of Rho
-
-The priors for rho are determined using the Betancourt method.  This fits an inverse gamma distribution to rho, such that the each of probability that the length scale of rho is less than the minimum or or greater than the maximum is $\alpha \%$.  In the report, we set $\alpha=0.001$ (the tail probability on each side).  We work with the scaled accident year and development lag input dimensions, which have the same minimum and maximum length scales.  
-
-##### Tuning for ILR Models
-
-ILR models train on 10x10 squares of incremental claims
-
-```{r echo=FALSE}
-alpha = 0.001
-
-scaled_development_lag = c(scale(1:10))
-
-min_length_scale = abs(scaled_development_lag[1]-scaled_development_lag[2]) # choose any two sequential points
-max_length_scale = abs(max(scaled_development_lag)-min(scaled_development_lag)) # choose any two sequential points
-
-prior_rho = rho_prior_tune(tail_size = alpha, lower_ls = min_length_scale, upper_ls = max_length_scale)
-
-prior_rho = prior_rho$par
-```
-
-* The minimum length scale is: `r min_length_scale`
-* The maximum length scale is: `r max_length_scale`
-* The inverse gamma prior parameters for rho (for each of the AccidentYear and DevelopmentLag dimensions are) are: `r round(prior_rho,3)`
 
 
 
@@ -155,10 +127,7 @@ res_gp_inc_hurdle_multi_co = all_business_line_calcs(projection_fun = stan_ilr_m
                                 prior_alpha = 1)
 
 save(res_gp_inc_hurdle_multi_co , file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_5.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual_all2.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual_all.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual.RData"))
-load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_5.RData"))
+#load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_5.RData"))
 
 ```
 
@@ -181,10 +150,7 @@ res_gp_inc_hurdle_multi_co_indiv = all_business_line_calcs(projection_fun = stan
                                 prior_rho_company = 1)
 
 save(res_gp_inc_hurdle_multi_co_indiv , file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_indiv.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual_all2.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual_all.RData"))
-# save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual.RData"))
-load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_indiv.RData"))
+#load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multi_co_indiv.RData"))
 
 ```
 
@@ -213,7 +179,7 @@ res_mack_ladder = all_business_line_calcs(business_lines = business_lines, data 
 
 
 save(res_mack_ladder , file = paste0(output_dir, "report_algos_mack_ladder_multicompare.RData"))
-load(file = paste0(output_dir, "report_algos_mack_ladder_multicompare.RData"))
+#load(file = paste0(output_dir, "report_algos_mack_ladder_multicompare.RData"))
 
 
 ```
@@ -235,7 +201,7 @@ res_boot_ladder = all_business_line_calcs(business_lines = business_lines,
 
 
 save(res_boot_ladder , file = paste0(output_dir, "report_algos_boot_ladder_multicompare.RData"))
-load(file = paste0(output_dir, "report_algos_boot_ladder_multicompare.RData"))
+#load(file = paste0(output_dir, "report_algos_boot_ladder_multicompare.RData"))
 
 
 ```
@@ -263,7 +229,7 @@ res_gp_inc = all_business_line_calcs(business_lines = business_lines, data = dat
 
 
 save(res_gp_inc , file = paste0(output_dir, "report_algos_gp_inc_multicompare.RData"))
-load( file = paste0(output_dir, "report_algos_gp_inc_multicompare.RData"))
+#load( file = paste0(output_dir, "report_algos_gp_inc_multicompare.RData"))
 
 
 ```
@@ -291,7 +257,7 @@ res_gp_inc_hurdle = all_business_line_calcs(business_lines = business_lines, dat
                                      formula_H = y_scaled ~ AccidentYear_scaled + log(DevelopmentLag) -1,
                                      stanFile = "gp_hurdle_phiapprox_05.stan")
 save(res_gp_inc_hurdle , file = paste0(output_dir, "report_algos_gp_inc_hurdle_multicompare.RData"))
-load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multicompare.RData"))
+#load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_multicompare.RData"))
 
 ```
 
@@ -325,7 +291,7 @@ res_gp_inc_hurdle_virtual = all_business_line_calcs(business_lines = business_li
                                       virtual_data = T, virtual_point = -.3, virtual_accident_year = 1988:1997, virtual_development_lag = 11,
                                      stanFile = "gp_hurdle_phiapprox_05.stan")
 save(res_gp_inc_hurdle_virtual , file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual.RData"))
-load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual.RData"))
+#load( file = paste0(output_dir, "report_algos_gp_inc_hurdle_virtual.RData"))
 
 ```
 
